[project]
name = "python-vw-carnet"
version = "0.3.0"
description = "Python client for myVW login, session management, and vehicle data APIs"
readme = "README.md"
authors = [
    { name = "dmillerw", email = "dmillerw@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "dataclasses-json>=0.6.7",
    "pydantic>=2.12.5",
    "requests>=2.32.5",
]

[project.scripts]
vw-carnet = "python_vw_carnet.__main__:main"

[build-system]
requires = ["uv_build>=0.10.12,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "ruff>=0.15.7",
]
